examples/test/testpolicy15537.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15537
  namespace: namespace246
spec:
  podSelector:
    matchLabels:
      key3: value9
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value14
          key4: value40
          key32: value0
      podSelector:
        matchLabels:
          key23: value6
